--- a/package.json
+++ b/package.json
@@ -54,7 +54,9 @@
     "@dcloudio/uni-mp-weixin": "3.0.0-4080420251103001",
     "@dcloudio/uni-mp-xhs": "3.0.0-4080420251103001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-4080420251103001",
-    "pinia": "^3.0.4",
+    "@dcloudio/uni-ui": "^1.5.11",
+    "pinia": "^2.0.0",
+    "pinia-plugin-persistedstate": "^3.0.0",
     "vue": "^3.4.21",
     "vue-i18n": "^9.1.9"
   },
@@ -66,6 +68,7 @@
     "@dcloudio/vite-plugin-uni": "3.0.0-4080420251103001",
     "@vue/runtime-core": "^3.4.21",
     "@vue/tsconfig": "^0.1.3",
+    "sass": "^1.97.3",
     "typescript": "^4.9.4",
     "vite": "5.2.8",
     "vue-tsc": "^1.0.24"
