--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -101,23 +101,62 @@ jobs:
           ### 📁 构建产物
           $BUILD_OUTPUTS
 
-          ### 🔧 使用说明
-          1. **H5版本**: 可直接部署到Web服务器
-          2. **微信小程序**: 使用微信开发者工具导入 \`dist/build/mp-weixin/\` 目录
-          3. **支付宝小程序**: 使用支付宝开发者工具导入 \`dist/build/mp-alipay/\` 目录
-          4. **Android/iOS**: 需使用HBuilderX进行原生打包
+          ### 📱 Android/iOS原生应用构建指南
 
-          ### 🚀 多端支持
-          本项目基于UniApp开发，支持以下平台：
-          - 📱 H5网页版
-          - 💬 微信小程序
-          - 💰 支付宝小程序
-          - 🤖 Android原生应用
-          - 🍎 iOS原生应用
+          #### 方法一：使用HBuilderX（推荐）
+          1. **下载HBuilderX**: https://www.dcloud.io/hbuilderx.html
+          2. **导入项目**: 打开HBuilderX → 文件 → 导入 → 选择本项目目录
+          3. **配置原生打包**:
+             - 选择项目 → 发行 → 原生App-云打包
+             - 配置应用名称、图标、启动图等
+             - 选择Android/iOS平台
+             - 配置证书（iOS需要苹果开发者账号）
+          4. **开始打包**: 点击打包按钮，等待云端构建完成
+          5. **下载安装包**: 构建完成后下载apk/ipa文件
+
+          #### 方法二：本地Android Studio构建（仅Android）
+          1. **生成Android项目**:
+             \`\`\`bash
+             # 在项目根目录执行
+             npm run build:app-plus
+             \`\`\`
+          2. **导入Android Studio**:
+             - 打开Android Studio
+             - 导入 \`dist/build/app-plus/\` 目录
+             - 配置签名和构建变体
+          3. **构建APK**:
+             - Build → Generate Signed Bundle / APK
+             - 选择APK，配置签名密钥
+             - 选择构建类型（debug/release）
+
+          #### 方法三：使用uni-app CLI
+          1. **安装HBuilderX CLI**:
+             \`\`\`bash
+             # 全局安装
+             npm install -g @dcloudio/uni-cli-shared
+             \`\`\`
+          2. **构建Android项目**:
+             \`\`\`bash
+             # 生成Android项目
+             uni build --platform app-plus --target android
+             \`\`\`
+          3. **项目位置**: 生成的项目位于 \`dist/build/app-plus/\`
+
+          ### ⚠️ 注意事项
+          1. **iOS构建**: 需要苹果开发者账号（年费$99）
+          2. **证书配置**: 必须配置正确的签名证书
+          3. **云打包限制**: 免费版有次数限制，建议使用本地构建
+          4. **版本兼容**: 确保HBuilderX版本与uni-app版本兼容
+
+          ### 🔗 相关资源
+          - [uni-app官方文档](https://uniapp.dcloud.net.cn/)
+          - [HBuilderX下载](https://www.dcloud.io/hbuilderx.html)
+          - [Android Studio下载](https://developer.android.com/studio)
+          - [苹果开发者计划](https://developer.apple.com/programs/)
 
           ---
 
-          *自动生成于 GitHub Actions*
+          *自动生成于 GitHub Actions - 专注于应用构建产物*
           EOF
 
           # 输出Release正文
@@ -128,33 +167,47 @@ jobs:
 
       - name: Package build outputs
         run: |
-          # 创建压缩包
+          # 创建压缩包目录
           mkdir -p release-packages
 
-          # 压缩H5版本
+          # 压缩H5版本 - 主要构建产物
           if [ -d "dist/build/h5" ]; then
             tar -czf release-packages/h5-build.tar.gz -C dist/build/h5 .
-            echo "已打包H5版本: release-packages/h5-build.tar.gz"
+            echo "✅ 已打包H5版本: release-packages/h5-build.tar.gz"
+            # 计算文件大小
+            H5_SIZE=$(du -h release-packages/h5-build.tar.gz | cut -f1)
+            echo "H5版本大小: $H5_SIZE"
           elif [ -d "dist" ]; then
             tar -czf release-packages/h5-build.tar.gz -C dist .
-            echo "已打包H5版本: release-packages/h5-build.tar.gz"
+            echo "✅ 已打包H5版本: release-packages/h5-build.tar.gz"
+            H5_SIZE=$(du -h release-packages/h5-build.tar.gz | cut -f1)
+            echo "H5版本大小: $H5_SIZE"
+          else
+            echo "⚠️  H5构建目录不存在"
           fi
 
-          # 压缩微信小程序
+          # 压缩微信小程序 - 可选构建产物
           if [ -d "dist/build/mp-weixin" ]; then
             tar -czf release-packages/wechat-miniprogram.tar.gz -C dist/build/mp-weixin .
-            echo "已打包微信小程序: release-packages/wechat-miniprogram.tar.gz"
+            echo "✅ 已打包微信小程序: release-packages/wechat-miniprogram.tar.gz"
+            WECHAT_SIZE=$(du -h release-packages/wechat-miniprogram.tar.gz | cut -f1)
+            echo "微信小程序大小: $WECHAT_SIZE"
+          else
+            echo "ℹ️  微信小程序构建目录不存在，已跳过"
           fi
 
-          # 压缩支付宝小程序
+          # 压缩支付宝小程序 - 可选构建产物
           if [ -d "dist/build/mp-alipay" ]; then
             tar -czf release-packages/alipay-miniprogram.tar.gz -C dist/build/mp-alipay .
-            echo "已打包支付宝小程序: release-packages/alipay-miniprogram.tar.gz"
+            echo "✅ 已打包支付宝小程序: release-packages/alipay-miniprogram.tar.gz"
+            ALIPAY_SIZE=$(du -h release-packages/alipay-miniprogram.tar.gz | cut -f1)
+            echo "支付宝小程序大小: $ALIPAY_SIZE"
+          else
+            echo "ℹ️  支付宝小程序构建目录不存在，已跳过"
           fi
 
-          # 创建完整的源代码包
-          tar -czf release-packages/source-code.tar.gz --exclude='node_modules' --exclude='.git' .
-          echo "已打包源代码: release-packages/source-code.tar.gz"
+          # 不创建源代码包，只保留应用构建产物
+          echo "ℹ️  跳过源代码包创建，专注于应用构建产物"
 
       - name: Check files before release
         run: |
@@ -162,12 +215,10 @@ jobs:
           echo "=== release-packages目录 ==="
           ls -la release-packages/ 2>/dev/null || echo "release-packages目录不存在"
           echo ""
-          echo "=== 检查文件是否存在 ==="
-          for file in release-packages/* package.json README.md LICENSE; do
+          echo "=== 只上传应用构建产物 ==="
+          for file in release-packages/*; do
             if [ -e "$file" ]; then
-              echo "✅ 文件存在: $file"
-            else
-              echo "❌ 文件不存在: $file"
+              echo "✅ 应用构建产物: $file"
             fi
           done
 
@@ -185,9 +236,6 @@ jobs:
           fail_on_unmatched_files: false
           files: |
             release-packages/*
-            package.json
-            README.md
-            LICENSE
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
@@ -195,8 +243,6 @@ jobs:
           name: assistant-build-v${{ steps.package_version.outputs.version }}
           path: |
             release-packages/
-            dist/
-            package.json
           retention-days: 30
 
   # 简单的版本更新检查（可选）
